fixed scrollbar

--- a/Client/src/components/Main/Main.css
+++ b/Client/src/components/Main/Main.css
@@ -12,7 +12,7 @@
     min-height: 100vh;
     padding-bottom: 15vh;
     position: relative;
-    background-color: black;
+    background-color: #131314;
     color: white;
     transition: background-color 0.5s ease;
 }
@@ -154,6 +154,7 @@
 .searchbox div{
     display: flex;
     align-items: center;
+    cursor: pointer;
     gap: 15px;
 }
 .bottom-info{
